--- a/trunk/pdf_template/book.tex
+++ b/trunk/pdf_template/book.tex
@@ -33,7 +33,7 @@
 
 \begin{document}
 
-\author{João Filipe Meneses Henriques\\João Gusmão Guedes}
+\author{João Filipe Meneses Henriques\\João Nuno Santos de Gusmão Guedes}
 \title{Turn 12\\
 {\small FEUP-PLOG, Turma 3MIEIC05, Grupo 17}}
 \subtitle{-- Monograph --}
@@ -49,7 +49,8 @@
 
 \mainmatter%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\include{chapter}
+\include{abstract}
+\include{introduction}
 
 %\appendix
 %\include{appendix}
