--- a/pdf_template/restrictions.tex
+++ b/pdf_template/restrictions.tex
@@ -6,6 +6,28 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%% Springer-Verlag %%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{Ficheiros de Dados}
+\label{data:1}
+
+Os ficheiros de dados são simples ficheiros de texto (\textit{.txt}), que em cada linha têm os dígitos de cada face.
+As faces encontram-se pela seguinte ordem: Topo, Baixo, Frente, Trás, Esquerda e por fim Direita.
+
+De seguida encontra-se um exemplo deste ficheiro com os valores do problema original:
+
+\begin{f_exemplo}[H]
+\begin{verbatim}
+
+356735869637537564374649
+343574954363596738547975
+353748635975458485676439
+349576573795398457964379
+357863653739359498735895
+348765738453874583769785
+\end{verbatim}
+\caption{Problema original do turn12, com 24 dígitos por face:}
+\end{f_exemplo}
+
+
 
 \section{Variáveis de Decisão}
 \label{restr:1}
