--- a/trunk/pdf_template/book.tex
+++ b/trunk/pdf_template/book.tex
@@ -20,6 +20,10 @@
 \usepackage[bottom]{footmisc}% places footnotes at page bottom
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{color}
+\usepackage{listings}
+\usepackage{float}
+
 % etc.
 % see the list of further useful packages
 % in the Reference Guide, Sects. 2.3, 3.1-3.3
@@ -28,6 +32,10 @@
                        % please use the style svind.ist with
                        % your makeindex program
 
+
+\floatstyle{ruled}
+\newfloat{f_exemplo}{!ht}{lop}
+\floatname{f_exemplo}{Exemplo}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
