--- a/trunk/pdf_template/book.tex
+++ b/trunk/pdf_template/book.tex
@@ -54,10 +54,10 @@
 
 \tableofcontents
 
-
+\include{abstract}
 \mainmatter%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\include{abstract}
+
 \include{introduction}
 \include{restrictions}
 
@@ -65,8 +65,9 @@
 %\include{appendix}
 
 \backmatter%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\include{solutions}
+%\include{solutions}
 \include{referenc}
+\include{anexo}
 \printindex
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
