--- a/trunk/pdf_template/anexo.tex
+++ b/trunk/pdf_template/anexo.tex
@@ -58,6 +58,22 @@ escapeinside={\$}{)}         % if you want to add a comment within your code
 :- use_module(library(lists)).
 
 
+
+/**********************************************************
+ * Manipulation of file path.
+ * defines the main path folder, needed in windows
+ * or the installation folder of prolog will be used
+ **********************************************************/
+ 
+% uncommet to ignore
+%main_path('').
+main_path('C:/Users/João Henriques/Desktop/Eng. Informática/FEUP/PLOG/turn12/src/').
+
+construct_full_file_path(File, Path) :-
+	main_path(Dir),
+	atom_concat(Dir, File, Path).
+	
+	
 /**********************************************************
  * Gets and Sets the elements of the list, in pre marked
  * positions, as the new contact points
@@ -238,7 +254,7 @@ verifyLineDistance(_, _):-!,
  **********************************************************/
  
 turn12p:-
-	turn12('C:/Users/João Henriques/Desktop/Eng. Informática/FEUP/PLOG/turn12/src/cubo_a.txt').
+	turn12('cubo_a.txt').
  
 /*dump_o_face( Top,Bottom,Front,Back,Left,Right, R1,R2,R3,R4,R5,R6 ) :- !,
 	length(Top, Size),
@@ -258,9 +274,9 @@ turn12p:-
 		ShuffTop, ShuffBottom, ShuffFront, ShuffBack, ShuffLeft, ShuffRight ).*/
 
 turn12(Filename):-
-
+	construct_full_file_path( Filename, FilePath ),
 	write('Reading cube file...'),nl,
-	parse_file(Filename, Top, Bottom, Front, Back, Left, Right), !,
+	parse_file(FilePath, Top, Bottom, Front, Back, Left, Right), !,
 	
 	write('Attempting to solve cube...'),nl,
 	turn12( Top,Bottom,Front,Back,Left,Right,    R1, R2, R3, R4, R5, R6,
@@ -526,15 +542,14 @@ print_cube_stats( Top, Bottom, Front, Back, Left, Right, FaceSize ) :-
 /**********************************************************
  * Generates a new problem base on the arguments
  **********************************************************/
- 
-turn12genp:-
-	turn12gen( 'C:/Users/João Henriques/Desktop/Eng. Informática/FEUP/PLOG/turn12/src/cubo_a.txt', 10 ).
-	
-turn12genp(Dist):-
-	turn12gen( 'C:/Users/João Henriques/Desktop/Eng. Informática/FEUP/PLOG/turn12/src/cubo_a.txt', Dist ).
+
+turn12gen(Dist):-
+	turn12gen( 'cubo_a.txt', Dist ).
 
 turn12gen(Filename, Distance):-
 	Distance > 0,
+	
+	construct_full_file_path( Filename, FilePath ),
 	
 	repeat,
 	write('Making an attempt to find if current generated random numbers can make a solution...'), nl,
@@ -628,7 +643,7 @@ turn12gen(Filename, Distance):-
                   LL_C1,LL_C2,LL_C3,LL_C4,   FF_C1,FF_C2,FF_C3,FF_C4,   BO_C1,BO_C2,BO_C3,BO_C4 ),
 				  
 	write('Writing cube to file.'), nl,
-	write_cube_file(Filename, ShuffTop, ShuffBottom, ShuffFront, ShuffBack, ShuffLeft, ShuffRight ).
+	write_cube_file(FilePath, ShuffTop, ShuffBottom, ShuffFront, ShuffBack, ShuffLeft, ShuffRight ).
 
 turn12gen(_,_):-
 	write('Distance between elements must be grater than 0. Aborting.').
