--- a/trunk/pdf_template/introduction.tex
+++ b/trunk/pdf_template/introduction.tex
@@ -4,14 +4,14 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%% Springer-Verlag %%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Introducão}
+\section{Introducão}
 \label{introduction} % Always give a unique label
 % use \chaptermark{}
 % to alter or adjust the chapter heading in the running head
 
 Programação em lógica com restrições é uma junção de dois paradigmas: solução de restrições e programação em lógica. Esta combinação permite uma concepção mais expressiva e flexível — e em alguns casos mais eficiente - de problemas lógicos.
 
-\section{Motivação}
+\subsection{Motivação}
 \label{sec:1}
 % Always give a unique label
 % and use \ref{<label>} for cross-references
@@ -20,9 +20,10 @@ Programação em lógica com restrições é uma junção de dois paradigmas: so
 % to alter or adjust the section heading in the running head
 A motivação deste trabalho incidiu na compreensão de um paradigma de programação que já nos é familiar, envolvendo uma nova componente de restrições; resolver problemas lógicos com restrições de uma forma geral, tendo a possibilidade de os refinar e otimizar para uma solução particular.
 
-\section{Objectivos}
+\subsection{Objectivos}
 \label{sec:2}
 Resolver a versão original do jogo Turn12 recorrendo a restrições; gerar cubos com um número de dígitos variável, e avaliar se estes têm solução ou não segundo as restrições definidas.
+
 
 \section{Descrição do problema}
 \label{sec:3}
