--- a/pdf_template/book.tex
+++ b/pdf_template/book.tex
@@ -54,12 +54,11 @@
 
 \tableofcontents
 
-\include{abstract}
+%\include{abstract}
 \mainmatter%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\include{introduction}
-\include{restrictions}
+\include{sections}
 
 %\appendix
 %\include{appendix}
