--- a/pdf_template/book.tex
+++ b/pdf_template/book.tex
@@ -10,6 +10,7 @@
 % RECOMMENDED %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[envcountsame,envcountchap]{svmono}
 
+
 % choose options for [] as required from the list
 % in the Reference Guide, Sect. 2.2
 
@@ -19,7 +20,7 @@
 \usepackage{multicol}        % used for the two-column index
 \usepackage[bottom]{footmisc}% places footnotes at page bottom
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
+%\usepackage[T1]{fontenc}
 \usepackage{color}
 \usepackage{listings}
 \usepackage{float}
@@ -57,7 +58,6 @@
 %\include{abstract}
 \mainmatter%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
 \include{sections}
 
 %\appendix
@@ -67,7 +67,7 @@
 %\include{solutions}
 \include{referenc}
 \include{anexo}
-\printindex
+%\printindex
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
