--- a/pdf_template/book.tex
+++ b/pdf_template/book.tex
@@ -13,7 +13,7 @@
 
 % choose options for [] as required from the list
 % in the Reference Guide, Sect. 2.2
-
+\usepackage[portuguese]{babel}
 \usepackage{makeidx}         % allows index generation
 \usepackage{graphicx}        % standard LaTeX graphics tool
                              % when including figure files
@@ -55,9 +55,10 @@
 
 \tableofcontents
 
-%\include{abstract}
+
 \mainmatter%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\include{abstract}
 \include{sections}
 
 %\appendix
