--- a/trunk/pdf_template/referenc.tex
+++ b/trunk/pdf_template/referenc.tex
@@ -23,17 +23,6 @@
 Information technology encyclopedia and acronyms. Springer, Berlin
 Heidelberg New York
 
-% Contributed Works
-\bibitem{contribution} Broy M (2002) Software engineering -- From
-auxiliary to key technologies. In: Broy M, Denert E (eds)
-Software Pioneers. Springer, Berlin Heidelberg New York
-
-% Journal
-\bibitem{journal} Che M, Grellmann W, Seidler S (1997)
-Appl Polym Sci 64:1079--1090
-
-% Theses
-\bibitem{thesis} Ross DW (1977) Lysosomes and storage diseases. MA
-Thesis, Columbia University, New York
+\bibitem{turn12} Página puzzle turn12, http://www.jaapsch.net/puzzles/turn12.htm
 
 \end{thebibliography}
