--- a/trunk/pdf_template/sections.tex
+++ b/trunk/pdf_template/sections.tex
@@ -4,8 +4,8 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%% Springer-Verlag %%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Artigo}
-\label{art}
+\chapter{Conteúdo}
+\label{cont}
 
 \section{Introducão}
 \label{introduction} % Always give a unique label
