pontos de contacto assinalados na figura

--- a/pdf_template/sections.tex
+++ b/pdf_template/sections.tex
@@ -42,7 +42,7 @@ No entanto, para garantir a unicidade de solução, em valores demasiado elevado
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.4]{turn12.png}
-\caption{Problema original}
+\caption{Problema original, com os pontos de contacto visíveis assinalados}
 \label{fig:1}
 \end{center}
 \end{figure}
