--- a/pdf_template/referenc.tex
+++ b/pdf_template/referenc.tex
@@ -25,4 +25,11 @@ Heidelberg New York
 
 \bibitem{turn12} Página puzzle turn12, http://www.jaapsch.net/puzzles/turn12.htm
 
+\bibitem{p_turn12} Patente puzzle turn12, http://www.jaapsch.net/puzzles/patents/de20112728u.pdf
+
+\bibitem{sicstus} SCStus Prolog, http://www.sics.se/isl/sicstuswww/site/index.html
+
+\bibitem{constraints} Constraint Logic Programming over Finite Domains,\\
+http://www.sics.se/sicstus/docs/latest4/html/sicstus\.html/lib\_002dclpfd\.html\#lib\_002dclpfd
+
 \end{thebibliography}
