--- a/trunk/pdf_template/sections.tex
+++ b/trunk/pdf_template/sections.tex
@@ -163,6 +163,7 @@ Adicionalmente, foi desenvolvido o predicado \textit{print\_rots}, que imprime o
 \end{center}
 \end{figure}
 
+Por fim são imprimidas algumas estatísticas obtidas através do predicado interno \textit{fd\_statistics}, que mostra alguns valores úteis que ajudam a perceber o número de \textit{constraints} que foram testadas, \textit{backtracks} ocorridos, entre outros.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
